# naija-learn

./: .env.example  .gitignore  CONTRIBUTING.md  Project-Scope.md  README.md  alembic-autocommit-article.md  main.py  pyproject.toml  todo.md  utilities.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Articles/: naija-learn-build-article.md
alembic/: env.py
alembic/versions/: 4debd5afbfe6_create_initial_tables.py
app/: config.py  database.py  main.py
app/models/: __init__.py  content_cache.py  exam_body.py  exam_body_subject.py  subject.py  subtopic.py  topic.py
app/prompts/: builder.py
app/routes/: __init__.py  content.py  subjects.py  subtopics.py  topics.py
app/schemas/: __init__.py  content.py  response.py  subject.py  subtopic.py  topic.py
app/services/: __init__.py  ai_service.py  cache_service.py  content_service.py  subject_service.py  subtopic_service.py  topic_service.py
data/: waec_economics_seed.json
scripts/: seed.py
